--- a/src/core/license.tmpl
+++ b/src/core/license.tmpl
@@ -1,6 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<!--
-The MIT License
+/* The MIT License
 
 Copyright (c) 2011 Vastardis Capital Services, http://www.vastcap.com/
 
@@ -21,15 +19,4 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
--->
-<doodad xmlns="http://schemas.vastcap.com/doodadDefinition"
-           type="doodads.library.test"
-           inheritsFrom="doodads.doodad">
-  <behaviour path="~/TestDoodad/TestDoodad.js" />
-  <templates>
-    <base path="~/TestDoodad/TestDoodad.html"/>
-  </templates>
-  <stylesheets>
-    <stylesheet path="~/TestDoodad/TestDoodad.css"/>
-  </stylesheets>
-</doodad>
+*/
